--- a/Carrossel/hannah - Copy (2).html
+++ b/Carrossel/hannah - Copy (2).html
@@ -57,7 +57,8 @@
       align-items: center;
       justify-content: space-between;
       padding: 10px 20px;
-      background-color: var(--fundo-claro);
+      /* Tornamos translúcida a cor de fundo */
+      background-color: rgba(232, 240, 232, 0.85);
       position: relative;
     }
 
@@ -116,12 +117,21 @@
       background-color: var(--secundaria);
     }
 
-    /* Seletor de idioma */
-    .language-selector {
+    /* Seletor de idioma estilizado */
+    #language-select {
       margin-left: 15px;
       font-family: 'Montserrat', sans-serif;
       font-weight: 600;
       font-size: 14px;
+      background-color: var(--primaria);
+      color: var(--texto-claro);
+      border: none;
+      border-radius: 6px;
+      padding: 5px 10px;
+      cursor: pointer;
+    }
+    #language-select:focus {
+      outline: none;
     }
 
     /*
@@ -139,51 +149,48 @@
     }
 
     /*
-      BANNER INICIAL (HERO):
-      Tornamos o background transparente para permitir que o vídeo apareça por trás.
+      BANNER INICIAL (HERO)
+      - Ocupa a tela visível (100vh)
+      - Texto branco, centralizado
+      - Removemos a imagem do banner
     */
     #hero {
       display: flex;
       flex-wrap: wrap;
       align-items: center;
       justify-content: center;
-      padding: 40px 20px;
+      min-height: 100vh; /* Altura mínima = altura da tela */
       background-color: transparent !important;
       position: relative;
       z-index: 0;
-    }
-
-    #hero .banner-img {
-      flex: 1 1 300px;
-      max-width: 500px;
       text-align: center;
-      margin-bottom: 20px;
     }
 
-    #hero .banner-img img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 10px;
-    }
+    /* Removemos o container da imagem original */
+    /* .banner-img { display: none; } */
 
     #hero .hero-text {
-      flex: 1 1 300px;
-      max-width: 500px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      color: #ffffff; /* Texto branco */
+      max-width: 600px;
       padding: 0 20px;
-      text-align: center;
+      margin: 0 auto;
     }
 
     #hero .hero-text h1 {
       font-family: 'Montserrat', sans-serif;
       font-weight: 700;
-      color: var(--primaria);
       margin-bottom: 15px;
       font-size: 2rem;
+      color: #ffffff;
     }
 
     #hero .hero-text p {
       margin-bottom: 20px;
       font-size: 1.1rem;
+      color: #ffffff;
     }
 
     #hero .hero-text button {
@@ -330,6 +337,7 @@
       object-fit: cover;
     }
 
+    /* Círculo pai que contém os minicírculos e faz rotação */
     #circle {
       position: absolute;
       top: 50%;
@@ -350,6 +358,7 @@
       }
     }
 
+    /* Minicírculos (sem top/left fixos agora) */
     .min-circle {
       position: absolute;
       width: 80px;
@@ -621,21 +630,12 @@
         padding: 20px;
       }
 
-      #hero .banner-img,
-      #hero .hero-text {
-        max-width: 100%;
-      }
-
       #hero .hero-text h1 {
         font-size: 1.4rem;
       }
 
       #hero .hero-text p {
         font-size: 1rem;
-      }
-
-      #sobre-nos p {
-        text-align: left !important;
       }
 
       #sobre-nos {
@@ -786,8 +786,8 @@
       <button id="nav-doar" onclick="alert('Página de Doação em desenvolvimento')">Doe Agora</button>
     </div>
 
-    <!-- Seletor de idioma -->
-    <select id="language-select" class="language-selector" onchange="changeLanguage()">
+    <!-- Seletor de idioma estilizado -->
+    <select id="language-select" onchange="changeLanguage()">
       <option value="pt">Português</option>
       <option value="en">English</option>
     </select>
@@ -795,9 +795,6 @@
 
   <!-- BANNER INICIAL / HERO -->
   <section id="hero">
-    <div class="banner-img">
-      <img src="imagens/banner.png" alt="Banner da Fundação Hannah" />
-    </div>
     <div class="hero-text">
       <h1 id="hero-h1">Transformando vidas e nações com o amor de Deus</h1>
       <p id="hero-p">Fé, cuidado e missão em ação.</p>
@@ -871,96 +868,104 @@
         />
       </div>
 
-      <!-- Círculo rotatório com mini-círculos -->
+      <!-- Círculo rotatório que contém os minicírculos -->
       <div id="circle">
-        <!-- 1: HIS (Learning Center) -->
+        <!-- 1: HIS Learning Center -->
         <div
           class="min-circle"
-          style="top: 10%; left: 50%; transform: translate(-50%, 0);"
           data-img="imagens/img1.png"
-          data-title="HIS (Learning Center)"
-          data-title-pt="HIS (Learning Center)"
-          data-title-en="HIS (Learning Center)"
+          data-title="HIS Learning Center"
+          data-title-pt="Centro de Aprendizado HIS"
+          data-title-en="HIS Learning Center"
           data-text="Oferecemos ensino de idiomas e esportes para crianças de baixa renda, utilizando histórias bíblicas para transmitir valores."
           data-text-pt="Oferecemos ensino de idiomas e esportes para crianças de baixa renda, utilizando histórias bíblicas para transmitir valores."
           data-text-en="We provide language and sports education for low-income children, using Bible stories to teach values."
         >
-          <img src="imagens/img1.png" alt="HIS (Learning Center)" />
+          <img src="imagens/img1.png" alt="HIS Learning Center" />
         </div>
 
-        <!-- 2: Saúde -->
+        <!-- 2: Healing Hands -->
         <div
           class="min-circle"
-          style="top: 30%; left: 85%; transform: translate(-50%, 0);"
           data-img="imagens/img3.png"
-          data-title="Saúde"
-          data-title-pt="Saúde"
-          data-title-en="Health"
+          data-title="Healing Hands"
+          data-title-pt="Mãos que Curam"
+          data-title-en="Healing Hands"
           data-text="Acompanhamos gestantes e bebês em vilas carentes, garantindo cuidados essenciais desde o pré-natal até os primeiros anos."
           data-text-pt="Acompanhamos gestantes e bebês em vilas carentes, garantindo cuidados essenciais desde o pré-natal até os primeiros anos."
           data-text-en="We monitor pregnant women and babies in vulnerable villages, ensuring essential care from prenatal to the early years."
         >
-          <img src="imagens/img3.png" alt="Saúde" />
+          <img src="imagens/img3.png" alt="Healing Hands" />
         </div>
 
-        <!-- 3: Alimentação -->
+        <!-- 3: Blessing Table -->
         <div
           class="min-circle"
-          style="top: 70%; left: 85%; transform: translate(-50%, 0);"
           data-img="imagens/img2.png"
-          data-title="Alimentação"
-          data-title-pt="Alimentação"
-          data-title-en="Nutrition"
+          data-title="Blessing Table"
+          data-title-pt="Mesa de Bênçãos"
+          data-title-en="Blessing Table"
           data-text="Fornecemos lanches durante a semana para os alunos e refeições completas aos sábados, atendendo necessidades físicas e emocionais."
           data-text-pt="Fornecemos lanches durante a semana para os alunos e refeições completas aos sábados, atendendo necessidades físicas e emocionais."
           data-text-en="We provide snacks during the week for students and full meals on Saturdays, meeting physical and emotional needs."
         >
-          <img src="imagens/img2.png" alt="Alimentação" />
+          <img src="imagens/img2.png" alt="Blessing Table" />
         </div>
 
-        <!-- 4: Bolsas Escolares -->
+        <!-- 4: Seeds of Wisdom -->
         <div
           class="min-circle"
-          style="top: 90%; left: 50%; transform: translate(-50%, 0);"
           data-img="imagens/img6.png"
-          data-title="Bolsas Escolares"
-          data-title-pt="Bolsas Escolares"
-          data-title-en="School Scholarships"
-          data-text="Garantimos a matrícula e bolsas escolares para crianças refugiadas de Myanmar, possibilitando acesso à educação formal."
-          data-text-pt="Garantimos a matrícula e bolsas escolares para crianças refugiadas de Myanmar, possibilitando acesso à educação formal."
-          data-text-en="We provide enrollment and scholarships for refugee children from Myanmar, giving them access to formal education."
+          data-title="Seeds of Wisdom"
+          data-title-pt="Sementes de Sabedoria"
+          data-title-en="Seeds of Wisdom"
+          data-text="Garantimos a matrícula e bolsas escolares para crianças refugiadas, possibilitando acesso à educação formal."
+          data-text-pt="Garantimos a matrícula e bolsas escolares para crianças refugiadas, possibilitando acesso à educação formal."
+          data-text-en="We provide enrollment and scholarships for refugee children, giving them access to formal education."
         >
-          <img src="imagens/img6.png" alt="Bolsas Escolares" />
+          <img src="imagens/img6.png" alt="Seeds of Wisdom" />
         </div>
 
-        <!-- 5: Casa de Refugiados -->
+        <!-- 5: Shiloh’s Home -->
         <div
           class="min-circle"
-          style="top: 70%; left: 15%; transform: translate(-50%, 0);"
           data-img="imagens/img5.png"
-          data-title="Casa de Refugiados"
-          data-title-pt="Casa de Refugiados"
-          data-title-en="Refugee Shelter"
+          data-title="Shiloh’s Home"
+          data-title-pt="Lar de Siló"
+          data-title-en="Shiloh’s Home"
           data-text="Acolhemos mulheres e crianças refugiadas da guerra, oferecendo abrigo, cuidado e esperança em meio à dor."
           data-text-pt="Acolhemos mulheres e crianças refugiadas da guerra, oferecendo abrigo, cuidado e esperança em meio à dor."
           data-text-en="We shelter women and children who are war refugees, offering them care, shelter, and hope in the midst of pain."
         >
-          <img src="imagens/img5.png" alt="Casa de Refugiados" />
+          <img src="imagens/img5.png" alt="Shiloh’s Home" />
         </div>
 
-        <!-- 6: Plantação de Igrejas -->
+        <!-- 6: Hannah’s Church Planting -->
         <div
           class="min-circle"
-          style="top: 30%; left: 15%; transform: translate(-50%, 0);"
           data-img="imagens/img4.png"
-          data-title="Plantação de Igrejas"
-          data-title-pt="Plantação de Igrejas"
-          data-title-en="Church Planting"
+          data-title="Hannah’s Church Planting"
+          data-title-pt="Plantação de Igrejas de Hannah"
+          data-title-en="Hannah’s Church Planting"
           data-text="Por meio do discipulado e formação de líderes, as sementes plantadas geram novas igrejas, fortalecendo comunidades cristãs."
           data-text-pt="Por meio do discipulado e formação de líderes, as sementes plantadas geram novas igrejas, fortalecendo comunidades cristãs."
           data-text-en="Through discipleship and leadership training, these seeds lead to new churches, strengthening Christian communities."
         >
-          <img src="imagens/img4.png" alt="Plantação de Igrejas" />
+          <img src="imagens/img4.png" alt="Hannah’s Church Planting" />
+        </div>
+
+        <!-- 7: Harvesting Faith -->
+        <div
+          class="min-circle"
+          data-img="imagens/img7.png"
+          data-title="Harvesting Faith"
+          data-title-pt="Colhendo Fé"
+          data-title-en="Harvesting Faith"
+          data-text="Ensina e desenvolve projetos de agricultura e criação de animais, fortalecendo comunidades, combatendo a fome e gerando renda."
+          data-text-pt="Ensina e desenvolve projetos de agricultura e criação de animais, fortalecendo comunidades, combatendo a fome e gerando renda."
+          data-text-en="It teaches and develops agricultural and livestock projects, strengthening communities, fighting hunger, and generating income."
+        >
+          <img src="imagens/img7.png" alt="Harvesting Faith" />
         </div>
       </div>
     </div>
@@ -968,12 +973,27 @@
     <!-- LISTA DE PROJETOS ABAIXO DO CARROSSEL -->
     <div class="project-list">
       <ul>
-        <li id="li-projeto1" data-title="HIS (Learning Center)" data-title-pt="HIS (Learning Center)" data-title-en="HIS (Learning Center)">HIS (Learning Center)</li>
-        <li id="li-projeto2" data-title="Saúde" data-title-pt="Saúde" data-title-en="Health">Saúde</li>
-        <li id="li-projeto3" data-title="Alimentação" data-title-pt="Alimentação" data-title-en="Nutrition">Alimentação</li>
-        <li id="li-projeto4" data-title="Bolsas Escolares" data-title-pt="Bolsas Escolares" data-title-en="School Scholarships">Bolsas Escolares</li>
-        <li id="li-projeto5" data-title="Casa de Refugiados" data-title-pt="Casa de Refugiados" data-title-en="Refugee Shelter">Casa de Refugiados</li>
-        <li id="li-projeto6" data-title="Plantação de Igrejas" data-title-pt="Plantação de Igrejas" data-title-en="Church Planting">Plantação de Igrejas</li>
+        <li id="li-projeto1" data-title="HIS Learning Center" data-title-pt="Centro de Aprendizado HIS" data-title-en="HIS Learning Center">
+          Centro de Aprendizado HIS
+        </li>
+        <li id="li-projeto2" data-title="Healing Hands" data-title-pt="Mãos que Curam" data-title-en="Healing Hands">
+          Mãos que Curam
+        </li>
+        <li id="li-projeto3" data-title="Blessing Table" data-title-pt="Mesa de Bênçãos" data-title-en="Blessing Table">
+          Mesa de Bênçãos
+        </li>
+        <li id="li-projeto4" data-title="Seeds of Wisdom" data-title-pt="Sementes de Sabedoria" data-title-en="Seeds of Wisdom">
+          Sementes de Sabedoria
+        </li>
+        <li id="li-projeto5" data-title="Shiloh’s Home" data-title-pt="Lar de Siló" data-title-en="Shiloh’s Home">
+          Lar de Siló
+        </li>
+        <li id="li-projeto6" data-title="Hannah’s Church Planting" data-title-pt="Plantação de Igrejas de Hannah" data-title-en="Hannah’s Church Planting">
+          Plantação de Igrejas de Hannah
+        </li>
+        <li id="li-projeto7" data-title="Harvesting Faith" data-title-pt="Colhendo Fé" data-title-en="Harvesting Faith">
+          Colhendo Fé
+        </li>
       </ul>
     </div>
   </section>
@@ -1170,10 +1190,43 @@
       circleElement.style.animationPlayState = 'running';
     });
 
+    /**************************************************
+     * FUNÇÃO PARA POSICIONAR AUTOMATICAMENTE OS MINI *
+     **************************************************/
+    function positionMinCircles() {
+      const circle = document.getElementById('circle');
+      const minCircles = circle.querySelectorAll('.min-circle');
+      const total = minCircles.length;
+
+      // Ajuste esse valor para alterar o quão distante do centro ficam os minicírculos
+      const radiusPercent = 35;
+
+      // Ângulo igualmente dividido (360° / total)
+      const angleStep = 360 / total;
+
+      minCircles.forEach((minCircle, index) => {
+        const angle = angleStep * index; // em graus
+        const rad = angle * (Math.PI / 180); // converte para radianos
+
+        // Posição usando 50% como centro, mais cos/sin multiplicado por radiusPercent
+        const x = 50 + radiusPercent * Math.cos(rad);
+        const y = 50 + radiusPercent * Math.sin(rad);
+
+        // Aplica estilos
+        minCircle.style.left = x + '%';
+        minCircle.style.top = y + '%';
+        // Centraliza o próprio minCircle
+        minCircle.style.transform = 'translate(-50%, -50%)';
+      });
+    }
+
+    // Chama a função ao carregar e quando a tela for redimensionada
+    window.addEventListener('DOMContentLoaded', positionMinCircles);
+    window.addEventListener('resize', positionMinCircles);
+
     /*****************************************
      * TRADUÇÕES (PT <-> EN) via dicionário  *
      *****************************************/
-    // Objeto com todas as traduções. Cada chave corresponde ao "id" no HTML.
     const translations = {
       "page-title": {
         pt: "Fundação Hannah",
@@ -1273,28 +1326,32 @@
       },
       // Lista de projetos
       "li-projeto1": {
-        pt: "HIS (Learning Center)",
-        en: "HIS (Learning Center)"
+        pt: "Centro de Aprendizado HIS",
+        en: "HIS Learning Center"
       },
       "li-projeto2": {
-        pt: "Saúde",
-        en: "Health"
+        pt: "Mãos que Curam",
+        en: "Healing Hands"
       },
       "li-projeto3": {
-        pt: "Alimentação",
-        en: "Nutrition"
+        pt: "Mesa de Bênçãos",
+        en: "Blessing Table"
       },
       "li-projeto4": {
-        pt: "Bolsas Escolares",
-        en: "School Scholarships"
+        pt: "Sementes de Sabedoria",
+        en: "Seeds of Wisdom"
       },
       "li-projeto5": {
-        pt: "Casa de Refugiados",
-        en: "Refugee Shelter"
+        pt: "Lar de Siló",
+        en: "Shiloh’s Home"
       },
       "li-projeto6": {
-        pt: "Plantação de Igrejas",
-        en: "Church Planting"
+        pt: "Plantação de Igrejas de Hannah",
+        en: "Hannah’s Church Planting"
+      },
+      "li-projeto7": {
+        pt: "Colhendo Fé",
+        en: "Harvesting Faith"
       },
 
       /* COMO AJUDAR */
