--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -57,7 +57,8 @@
       align-items: center;
       justify-content: space-between;
       padding: 10px 20px;
-      background-color: var(--fundo-claro);
+      /* Tornamos translúcida a cor de fundo */
+      background-color: rgba(232, 240, 232, 0.85);
       position: relative;
     }
 
@@ -148,51 +149,44 @@
     }
 
     /*
-      BANNER INICIAL (HERO):
-      Tornamos o background transparente para permitir que o vídeo apareça por trás.
+      BANNER INICIAL (HERO)
+      - Ocupa a tela visível (100vh)
+      - Texto branco, centralizado
     */
     #hero {
       display: flex;
       flex-wrap: wrap;
       align-items: center;
       justify-content: center;
-      padding: 40px 20px;
+      min-height: 100vh; /* Altura mínima = altura da tela */
       background-color: transparent !important;
       position: relative;
       z-index: 0;
-    }
-
-    #hero .banner-img {
-      flex: 1 1 300px;
-      max-width: 500px;
       text-align: center;
-      margin-bottom: 20px;
-    }
-
-    #hero .banner-img img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 10px;
     }
 
     #hero .hero-text {
-      flex: 1 1 300px;
-      max-width: 500px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      color: #ffffff; /* Texto branco */
+      max-width: 600px;
       padding: 0 20px;
-      text-align: center;
+      margin: 0 auto;
     }
 
     #hero .hero-text h1 {
       font-family: 'Montserrat', sans-serif;
       font-weight: 700;
-      color: var(--primaria);
       margin-bottom: 15px;
       font-size: 2rem;
+      color: #ffffff;
     }
 
     #hero .hero-text p {
       margin-bottom: 20px;
       font-size: 1.1rem;
+      color: #ffffff;
     }
 
     #hero .hero-text button {
@@ -226,15 +220,52 @@
       font-size: 2rem;
     }
 
-    #sobre-nos p {
-      max-width: 800px;
-      margin: 0 auto 20px auto;
-      font-size: 1rem;
+    /* Container que agrupa imagem e texto lado a lado */
+    .sobre-nos-content {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 30px;
     }
 
-    @media (min-width: 769px) {
-      #sobre-nos p {
-        text-align: justify;
+    .sobre-nos-img {
+      flex: 1 1 300px;
+      max-width: 400px;
+      animation: slideInLeft 1.5s ease forwards;
+    }
+    .sobre-nos-img img {
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+    }
+
+    .sobre-nos-text {
+      flex: 1 1 300px;
+      max-width: 600px;
+      animation: slideInRight 1.5s ease forwards;
+    }
+
+    /* Animações */
+    @keyframes slideInLeft {
+      0% {
+        opacity: 0;
+        transform: translateX(-50px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
+    @keyframes slideInRight {
+      0% {
+        opacity: 0;
+        transform: translateX(50px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateX(0);
       }
     }
 
@@ -243,7 +274,6 @@
       flex-wrap: wrap;
       justify-content: center;
       gap: 20px;
-      margin-top: 20px;
     }
 
     #sobre-nos .mv-vals .item {
@@ -632,11 +662,6 @@
         padding: 20px;
       }
 
-      #hero .banner-img,
-      #hero .hero-text {
-        max-width: 100%;
-      }
-
       #hero .hero-text h1 {
         font-size: 1.4rem;
       }
@@ -645,16 +670,20 @@
         font-size: 1rem;
       }
 
-      #sobre-nos p {
-        text-align: left !important;
-      }
-
       #sobre-nos {
         padding: 20px 10px;
       }
 
       #sobre-nos h2 {
         font-size: 1.6rem;
+      }
+
+      .sobre-nos-content {
+        flex-direction: column;
+      }
+      .sobre-nos-img,
+      .sobre-nos-text {
+        max-width: 100%;
       }
 
       #sobre-nos .mv-vals {
@@ -806,9 +835,6 @@
 
   <!-- BANNER INICIAL / HERO -->
   <section id="hero">
-    <div class="banner-img">
-      <img src="imagens/banner.png" alt="Banner da Fundação Hannah" />
-    </div>
     <div class="hero-text">
       <h1 id="hero-h1">Transformando vidas e nações com o amor de Deus</h1>
       <p id="hero-p">Fé, cuidado e missão em ação.</p>
@@ -821,19 +847,29 @@
   <!-- SEÇÃO SOBRE NÓS -->
   <section id="sobre-nos">
     <h2 id="sobre-nos-h2">Sobre Nós</h2>
-    <p id="sobre-nos-p1">
-      Nossa história começou em meio ao deserto. Durante a batalha contra um câncer maligno que acometeu Carla, fomos
-      confrontados com a realidade da brevidade da vida. Essa experiência nos fez refletir sobre o que realmente
-      importa. Foi nesse momento de vulnerabilidade que recebemos não apenas o milagre da cura, mas também o chamado
-      missionário.
-    </p>
-    <p id="sobre-nos-p2">
-      Há mais de 7 anos, temos dedicado nossas vidas integralmente a Deus, atuando como missionários no sudoeste
-      asiático. Já plantamos igrejas e Centros de Ensino na Tailândia e em Myanmar, e agora expandimos nosso trabalho
-      para o Camboja. Carla, pedagoga especialista em educação, e Gustavo, professor e teólogo com mestrado em
-      educação e missiologia, unem suas vocações para transformar vidas por meio da fé, educação e ação humanitária.
-    </p>
 
+    <!-- Container unindo imagem e texto lado a lado, com animação -->
+    <div class="sobre-nos-content">
+      <div class="sobre-nos-img">
+        <img src="imagens/gustavocarla.png" alt="Gustavo e Carla" />
+      </div>
+      <div class="sobre-nos-text">
+        <p>
+          Our story began in the midst of a desert. During Carla's battle against a malignant cancer, we were confronted
+          with the brevity of life. This experience made us reflect on what truly matters. In that vulnerable moment, 
+          we received not only the miracle of healing but also a missionary calling.
+        </p>
+        <p>
+          For over 7 years, we have dedicated our lives fully to God, serving as missionaries in Southeast Asia.
+          We have planted churches and Education Centers in Thailand and Myanmar, and now we are expanding our work
+          to Cambodia. Carla, a pedagogue specialized in education, and Gustavo, a professor and theologian with a
+          master's degree in education and missiology, combine their callings to transform lives through faith,
+          education, and humanitarian action.
+        </p>
+      </div>
+    </div>
+
+    <!-- Mantivemos os cartões de Missão, Visão e Valores -->
     <div class="mv-vals">
       <div class="item">
         <h3 id="missao-h3">Missão</h3>
@@ -1291,18 +1327,10 @@
         en: "Explore Our Work"
       },
 
-      /* SOBRE NÓS */
+      /* SOBRE NÓS (Títulos e blocos de texto) */
       "sobre-nos-h2": {
         pt: "Sobre Nós",
         en: "About Us"
-      },
-      "sobre-nos-p1": {
-        pt: "Nossa história começou em meio ao deserto. Durante a batalha contra um câncer maligno que acometeu Carla, fomos confrontados com a realidade da brevidade da vida. Essa experiência nos fez refletir sobre o que realmente importa. Foi nesse momento de vulnerabilidade que recebemos não apenas o milagre da cura, mas também o chamado missionário.",
-        en: "Our story began in the midst of a desert. During Carla's battle against a malignant cancer, we were confronted with the brevity of life. This experience made us reflect on what truly matters. In that vulnerable moment, we received not only the miracle of healing but also a missionary calling."
-      },
-      "sobre-nos-p2": {
-        pt: "Há mais de 7 anos, temos dedicado nossas vidas integralmente a Deus, atuando como missionários no sudoeste asiático. Já plantamos igrejas e Centros de Ensino na Tailândia e em Myanmar, e agora expandimos nosso trabalho para o Camboja. Carla, pedagoga especialista em educação, e Gustavo, professor e teólogo com mestrado em educação e missiologia, unem suas vocações para transformar vidas por meio da fé, educação e ação humanitária.",
-        en: "For over 7 years, we have dedicated our lives fully to God, serving as missionaries in Southeast Asia. We have planted churches and Education Centers in Thailand and Myanmar, and now we are expanding our work to Cambodia. Carla, a pedagogue specialized in education, and Gustavo, a professor and theologian with a master's degree in education and missiology, combine their callings to transform lives through faith, education, and humanitarian action."
       },
       "missao-h3": {
         pt: "Missão",
@@ -1338,7 +1366,6 @@
         pt: "Nossos Projetos",
         en: "Our Projects"
       },
-      // Lista de projetos
       "li-projeto1": {
         pt: "Centro de Aprendizado HIS",
         en: "HIS Learning Center"
