--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -57,8 +57,7 @@
       align-items: center;
       justify-content: space-between;
       padding: 10px 20px;
-      /* Tornamos translúcida a cor de fundo */
-      background-color: rgba(232, 240, 232, 0.85);
+      background-color: rgba(232, 240, 232, 0.85); /* Barra translúcida */
       position: relative;
     }
 
@@ -230,10 +229,30 @@
       margin-bottom: 30px;
     }
 
+    /* Iniciam escondidos e fora da tela */
+    .sobre-nos-img,
+    .sobre-nos-text {
+      opacity: 0;
+    }
+
+    .sobre-nos-img.animate-left {
+      transform: translateX(-120%);
+      transition: all 0.8s ease;
+    }
+    .sobre-nos-text.animate-right {
+      transform: translateX(120%);
+      transition: all 0.8s ease;
+    }
+
+    .sobre-nos-img.animate-left.active,
+    .sobre-nos-text.animate-right.active {
+      opacity: 1;
+      transform: translateX(0);
+    }
+
     .sobre-nos-img {
       flex: 1 1 300px;
       max-width: 400px;
-      animation: slideInLeft 1.5s ease forwards;
     }
     .sobre-nos-img img {
       width: 100%;
@@ -244,29 +263,6 @@
     .sobre-nos-text {
       flex: 1 1 300px;
       max-width: 600px;
-      animation: slideInRight 1.5s ease forwards;
-    }
-
-    /* Animações */
-    @keyframes slideInLeft {
-      0% {
-        opacity: 0;
-        transform: translateX(-50px);
-      }
-      100% {
-        opacity: 1;
-        transform: translateX(0);
-      }
-    }
-    @keyframes slideInRight {
-      0% {
-        opacity: 0;
-        transform: translateX(50px);
-      }
-      100% {
-        opacity: 1;
-        transform: translateX(0);
-      }
     }
 
     #sobre-nos .mv-vals {
@@ -323,15 +319,18 @@
 
     /* SEÇÃO PROJETOS (CARROSSEL CIRCULAR) */
     #projetos {
+      position: relative;  
+      color: #000;         /* Ajuste se precisar de contraste */
       padding: 60px 40px;
-      background-color: var(--fundo-claro);
       text-align: center;
+      background: url("imagens/fundocarrossel.png") center center / cover no-repeat fixed;
     }
 
     #projetos h2 {
       font-family: 'Montserrat', sans-serif;
       font-weight: 700;
-      color: var(--primaria);
+      /* Letra branca, conforme solicitado */
+      color: #ffffff;
       margin-bottom: 30px;
       font-size: 2rem;
     }
@@ -390,7 +389,7 @@
       }
     }
 
-    /* Minicírculos (sem top/left fixos agora) */
+    /* Minicírculos */
     .min-circle {
       position: absolute;
       width: 80px;
@@ -446,26 +445,41 @@
       cursor: pointer;
     }
 
-    /* LISTA DE PROJETOS (ABAIXO DO CARROSSEL) */
+    /* LISTA DE PROJETOS (BOTÕES) ABAIXO DO CARROSSEL */
     .project-list {
       max-width: 600px;
       margin: 0 auto 40px auto;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      align-items: center;
     }
+
     .project-list ul {
+      width: 100%;
       display: flex;
       flex-direction: column;
       gap: 10px;
     }
+
+    /* Ajustando estilo para parecer mais com botões */
     .project-list li {
-      background-color: #fff;
-      border: 1px solid var(--primaria);
-      border-radius: 6px;
-      padding: 10px;
+      display: inline-block;
+      text-align: center;
+      padding: 10px 20px;
+      background-color: var(--primaria);
+      color: #fff;
+      border: none;
+      border-radius: 8px;
       cursor: pointer;
       transition: background-color 0.3s ease;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 600;
+      font-size: 1rem;
     }
+
     .project-list li:hover {
-      background-color: var(--fundo-claro);
+      background-color: var(--secundaria);
     }
 
     /* SEÇÃO COMO AJUDAR */
@@ -681,9 +695,12 @@
       .sobre-nos-content {
         flex-direction: column;
       }
-      .sobre-nos-img,
-      .sobre-nos-text {
-        max-width: 100%;
+
+      .sobre-nos-img.animate-left {
+        transform: translateX(-100%);
+      }
+      .sobre-nos-text.animate-right {
+        transform: translateX(100%);
       }
 
       #sobre-nos .mv-vals {
@@ -693,6 +710,7 @@
 
       #projetos {
         padding: 30px 20px;
+        background-attachment: scroll; /* Para evitar problemas em telas pequenas */
       }
 
       #projetos h2 {
@@ -848,12 +866,12 @@
   <section id="sobre-nos">
     <h2 id="sobre-nos-h2">Sobre Nós</h2>
 
-    <!-- Container unindo imagem e texto lado a lado, com animação -->
+    <!-- Container unindo imagem e texto lado a lado, com animação via scroll -->
     <div class="sobre-nos-content">
-      <div class="sobre-nos-img">
+      <div class="sobre-nos-img animate-left">
         <img src="imagens/gustavocarla.png" alt="Gustavo e Carla" />
       </div>
-      <div class="sobre-nos-text">
+      <div class="sobre-nos-text animate-right">
         <p>
           Our story began in the midst of a desert. During Carla's battle against a malignant cancer, we were confronted
           with the brevity of life. This experience made us reflect on what truly matters. In that vulnerable moment, 
@@ -869,7 +887,7 @@
       </div>
     </div>
 
-    <!-- Mantivemos os cartões de Missão, Visão e Valores -->
+    <!-- Missão, Visão, Valores -->
     <div class="mv-vals">
       <div class="item">
         <h3 id="missao-h3">Missão</h3>
@@ -897,7 +915,7 @@
     </blockquote>
   </section>
 
-  <!-- SEÇÃO PROJETOS - CARROSSEL CIRCULAR -->
+  <!-- SEÇÃO PROJETOS - CARROSSEL CIRCULAR (fundo fundocarrossel.png) -->
   <section id="projetos">
     <h2 id="projetos-h2">Nossos Projetos</h2>
 
@@ -1169,7 +1187,7 @@
         const clickedTitle = this.getAttribute('data-title');
         const clickedText = this.getAttribute('data-text');
 
-        // Troca o conteúdo do círculo central (imagem + data-attributes)
+        // Troca o conteúdo do círculo central
         mainCircle.innerHTML = `
           <img
             src="${clickedImgSrc}"
@@ -1183,20 +1201,20 @@
           >
         `;
 
-        // Atualiza o círculo clicado com o conteúdo anterior do círculo central
+        // Atualiza o círculo clicado
         const clickedImg = this.querySelector('img');
         clickedImg.setAttribute('src', mainImgSrc);
         this.setAttribute('data-img', mainImgSrc);
         this.setAttribute('data-title', mainTitle);
         this.setAttribute('data-text', mainText);
 
-        // Também preservamos os data-title-pt/en e data-text-pt/en do círculo
+        // Também preservamos os data-title-pt/en e data-text-pt/en
         this.setAttribute('data-title-pt', mainImg.getAttribute('data-title-pt'));
         this.setAttribute('data-title-en', mainImg.getAttribute('data-title-en'));
         this.setAttribute('data-text-pt', mainImg.getAttribute('data-text-pt'));
         this.setAttribute('data-text-en', mainImg.getAttribute('data-text-en'));
 
-        // Abre o modal com as informações do círculo clicado
+        // Abre o modal
         document.getElementById('modal').style.display = 'block';
         document.getElementById('modal-title').textContent = clickedTitle;
         document.getElementById('modal-text').textContent = clickedText;
@@ -1217,7 +1235,7 @@
       }
     });
 
-    // Ao clicar numa LI de projeto, "simulamos" clique no respectivo círculo
+    // Ao clicar numa LI de projeto, simulamos clique no respectivo círculo
     function clickProjectCircleByTitle(title) {
       const circle = document.querySelector(`.min-circle[data-title="${title}"]`);
       if(circle) {
@@ -1265,12 +1283,10 @@
         // Aplica estilos
         minCircle.style.left = x + '%';
         minCircle.style.top = y + '%';
-        // Centraliza o próprio minCircle
         minCircle.style.transform = 'translate(-50%, -50%)';
       });
     }
 
-    // Chama a função ao carregar e quando a tela for redimensionada
     window.addEventListener('DOMContentLoaded', positionMinCircles);
     window.addEventListener('resize', positionMinCircles);
 
@@ -1327,7 +1343,7 @@
         en: "Explore Our Work"
       },
 
-      /* SOBRE NÓS (Títulos e blocos de texto) */
+      /* SOBRE NÓS */
       "sobre-nos-h2": {
         pt: "Sobre Nós",
         en: "About Us"
@@ -1476,12 +1492,36 @@
       }
     };
 
-    // Função que aplica a mudança de idioma
+    // Aplica idioma padrão e configura observer de animação
+    window.addEventListener('load', () => {
+      document.getElementById('language-select').value = 'pt';
+      changeLanguage();
+
+      /* INTERSECTION OBSERVER PARA ANIMAR IMAGEM E TEXTO NA SEÇÃO SOBRE NÓS */
+      const scrollElements = document.querySelectorAll('.animate-left, .animate-right');
+      const observerOptions = {
+        threshold: 0.05
+      };
+      const observer = new IntersectionObserver((entries, obs) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add('active');
+            obs.unobserve(entry.target); // anima só uma vez
+          }
+        });
+      }, observerOptions);
+
+      scrollElements.forEach(el => {
+        observer.observe(el);
+      });
+    });
+
+    // Função para trocar idioma
     function changeLanguage() {
       const newLang = document.getElementById('language-select').value;
       document.documentElement.setAttribute("lang", newLang);
 
-      // Percorre todas as chaves do dicionário e atualiza o conteúdo
+      // Percorre todas as chaves do dicionário e atualiza conteúdo
       for (let key in translations) {
         const element = document.getElementById(key);
         if (element) {
@@ -1499,16 +1539,15 @@
       updateCarrosselData(newLang);
     }
 
-    // Atualiza os data-attributes dos círculos do carrossel e da lista de projetos
+    // Ajusta data-attributes (carrossel e lista de projetos) para o novo idioma
     function updateCarrosselData(lang) {
       // min-circles
       document.querySelectorAll('.min-circle').forEach(circle => {
-        // Ajusta data-title e data-text
         circle.setAttribute('data-title', circle.getAttribute(`data-title-${lang}`));
         circle.setAttribute('data-text', circle.getAttribute(`data-text-${lang}`));
       });
 
-      // Círculo central (img)
+      // Círculo central
       const mainImg = document.querySelector('#main-circle-content img');
       if (mainImg) {
         mainImg.setAttribute('data-title', mainImg.getAttribute(`data-title-${lang}`));
@@ -1520,13 +1559,6 @@
         item.setAttribute('data-title', item.getAttribute(`data-title-${lang}`));
       });
     }
-
-    // Define idioma padrão (PT) ao carregar
-    window.addEventListener('load', () => {
-      document.getElementById('language-select').value = 'pt';
-      changeLanguage();
-    });
   </script>
-
 </body>
 </html>
